k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpulse-api
  namespace: cloudpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudpulse-api
  template:
    metadata:
      labels:
        app: cloudpulse-api
    spec:
      containers:
        - name: api
          image: cloudpulse-api:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
