k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpulse-web
  namespace: cloudpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudpulse-web
  template:
    metadata:
      labels:
        app: cloudpulse-web
    spec:
      containers:
        - name: web
          image: cloudpulse-web:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
