k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-api
  namespace: cloudpulse
spec:
  selector:
    app: cloudpulse-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
